fix(radio): prevent inner circle distortion
Set inner circle dimensions to be multiple of radio circle dimensions

--- a/src/framework/theme/components/radio/radio.component.scss
+++ b/src/framework/theme/components/radio/radio.component.scss
@@ -29,8 +29,8 @@
   .radio-circle::before {
     content: '';
     border-radius: 50%;
-    height: 80%;
-    width: 80%;
+    height: 75%;
+    width: 75%;
   }
 
   .text {
